--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <div class="box">
-        <img src="https://storage.googleapis.com/tomi-submision-1/Featured%20Image.jpg" alt="Foto Profile" class="box-img">
+        <img src="Featured Image.jpg" alt="Foto Profile" class="box-img">
         <h1>Tomi Timutius</h1>
-        <h5>Web Developer &bull; 3D Modeller</h5>
-        <p>Interested and passionate about anything computer-related like programming languages, videos, design, 3D such blender, etc. I am currently studying at Bangkit Academy 2022 regarding Cloud Computing. I've learned about HTML, CSS, and Javascript, as well as the foundations of using the Google Cloud Platform. I hope to have a studio animation and continue to grow in the future.</p>
-        <ul>
-            <li><a href="https://web.facebook.com/tomitimutius"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://twitter.com/urachan_ch"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/tomi-timutius-31b1ba137/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+        <h5>IT Support &bull; Digital Enthusiast</h5>
+        <p>I am interested and enthusiastic about everything related to computers, including programming languages, video editing, animation, and more. I am a graduate of the Bangkit 2022 Program in the Cloud Computing learning path. I recently completed the IT support specialist course from Coursera, which is part of the DigiTalent Fresh Graduate Program. I am going to work in the IT field and I am going to keep learning about technology.</p>
+            <li><a href="https://web.facebook.com/tomitimutius" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/tomi_571/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/tomi-timutius-31b1ba137/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
         </ul>
     
     </div>
