add portof page

--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,12 @@
         <h1>Tomi Timutius</h1>
         <h5>IT Support &bull; Digital Enthusiast</h5>
         <p>I am interested and enthusiastic about everything related to computers, including programming languages, video editing, animation, and more. I am a graduate of the Bangkit 2022 Program in the Cloud Computing learning path. I recently completed the IT support specialist course from Coursera, which is part of the DigiTalent Fresh Graduate Program. I am going to work in the IT field and I am going to keep learning about technology.</p>
+        <ul>
             <li><a href="https://web.facebook.com/tomitimutius" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
             <li><a href="https://www.instagram.com/tomi_571/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             <li><a href="https://www.linkedin.com/in/tomi-timutius-31b1ba137/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
         </ul>
-    
+        <button><a href="portof.html>Portofolio</a></button>
     </div>
 </body>
 </html>
