add portof fixed name

--- a/www/portof.html
+++ b/www/portof.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>PDF Viewer</h1>
+            <h1>Portofolio Viewer</h1>
         </header>
         <main>
             <iframe src="https://drive.google.com/file/d/1LIeMzjykfG62IZZOgK3voEu8ynAkIexD/preview" frameborder="0"></iframe>
         </main>
         <footer>
-            <p>&copy; 2024 Your Company</p>
+            <p>&copy; 2024 Tomi Timutius</p>
         </footer>
     </div>
 </body>
