--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
             <li><a href="https://www.instagram.com/tomi_571/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             <li><a href="https://www.linkedin.com/in/tomi-timutius-31b1ba137/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
         </ul>
-        <button><a href="portof.html>Portofolio</a></button>
+        <button><a href="portof.html">Portofolio</a></button>
     </div>
 </body>
 </html>
