--- a/www/portof.html
+++ b/www/portof.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stylish PDF Viewer</title>
+    <title>Portofolio Viewer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Portofolio Viewer</h1>
+            <h1>Portofolio</h1>
         </header>
         <main>
             <iframe src="https://drive.google.com/file/d/1LIeMzjykfG62IZZOgK3voEu8ynAkIexD/preview" frameborder="0"></iframe>
